jlatexmath (1.0.1)
        * There were no spaces around fraction (\nulldelimiterspace).

        * Eat one white (if it exists) after a \cr.

        * Color name must not be case sensitive

        * Add an example to connect C++ and JLaTeXMath in using Giws

        * Fix bad cmex10.ttf rendering with OpenJDK

	* Add \L, \l, \yen, \mathsterling (in unicode too)

	* Handle nbsp, \P and \S

	* Fix ligatures definitions in XML (\textbf{\text{-7}} was printed as \Omega)

	* Handle auto-break after a binop or relation op.

	* Spaces were not ignored in tabular options.

	* Bad positions of the exponent & indice with Bigr{|}_1^3

	* Fix bug with line-breaking (infinite loop on "\\ {abcdef}a" or exceptions).

	* Option added for max. width vs exact width.
	  Thanks to Felix Natter for the patch.

	* Update the example to use the TeXIconBuilder.
          Thanks to Felix Natter for the patch.

jlatexmath (1.0.0)
	* Fix bug 767: U with umlaut was shown as O with umlaut

	* Handle breakline in math mode

	* Remove String::isEmpty for Java 5 compatibility

        * Fix bug 907: bad rendering of text{text{x_1Test}}

jlatexmath (0.9.8)
	* Bugs 907 fixed: bad rendering of \text{\text{x_1Test}}.

	* Handle breakline.

	* Add a static method TexFormula::getAsText to manage breakline and text
	  as default.

jlatexmath (0.9.7)
	* Fix bugs with \bold{\b and \DeclareMathOperator{\ in partial mode.

	* Add a static method TeXFormula.getAsText to break the line according to \n and to convert into a RomanAtom.
	* newcommand{ threw an exception in partial mode.

	* Fix bug with T carron and L carron.

	* Add the unicode for Euler's constant.

	* Fix bug when getting length.

	* Add the TeX macros: \above and \abovewithdelims.

	* Blanks after a command were skipped in text mode.

	* Extend the way to code colors in \textcolor, \colorbox, \fcolorbox,
	  fgcolor and bgcolor.
	  Now \textcolor{color} where color could be 255,0,0 (int RGB) or